CSS/Clydeindex.css
body{
    margin: 0;
    font-family: helvetica, arial, sans-serif;
    font-size: 20px;
    line-height: 30px;
    text-align: center;
    background-color: grey;
}

header{
    background-color: darkolivegreen;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 50px;
}

h1, h2{
    font-family: 'Permanent Marker', cursive;
    text-align: center;
}

header h1{
    color: whitesmoke;
    font-size: 50px;
    

}

header img{
    border-radius: 170px;
    width: 300px;
    border: 20px solid darkgray;
}


main{
 margin: 0 auto;
 padding: 0 20px;
}
main img{
    max-width: 100%;
}

h2{
    font-size: 35px;
    color: whitesmoke;
    margin: 40px 0 10px;
}
p{
    font-size: 20px;
    color: honeydew;
}
ol{
    color: honeydew;
   
}

ul{
    color: honeydew;

}

footer{
text-align: center;
color: whitesmoke;
}

p.caption{
    color: lightsteelblue;
    font-style: italic;
    margin-top: 0;
    font-size: 15px;
}

